feat: implement openapi, working course
