# src/main/java/hu/webuni/spring/jupiterwebuni/controller/CourseController.java
@@ -1,8 +1,9 @@
 package hu.webuni.spring.jupiterwebuni.controller;
 
 import com.querydsl.core.types.Predicate;
+import hu.webuni.jupiterwebuni.api.CourseControllerApi;
+import hu.webuni.jupiterwebuni.api.model.CourseDto;
 import hu.webuni.spring.jupiterwebuni.model.course.Course;
-import hu.webuni.spring.jupiterwebuni.model.course.CourseDto;
 import hu.webuni.spring.jupiterwebuni.model.course.CourseMapper;
 import hu.webuni.spring.jupiterwebuni.repository.CourseRepository;
 import hu.webuni.spring.jupiterwebuni.service.CourseService;
@@ -10,44 +11,52 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.querydsl.binding.QuerydslPredicate;
 import org.springframework.data.web.SortDefault;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.context.request.NativeWebRequest;
 
-import jakarta.validation.Valid;
 import java.util.List;
 import java.util.Optional;
 
-@RestController
 @RequiredArgsConstructor
-@RequestMapping("/api/courses")
-public class CourseController {
+@RestController
+public class CourseController implements CourseControllerApi {
 
     private final CourseService courseService;
     private final CourseRepository courseRepository;
     private final CourseMapper courseMapper;
+    private final NativeWebRequest request;
+    private final MethodArgumentResolverHelper resolverHelper;
 
-    @PostMapping
-    public CourseDto createcourse(@RequestBody @Valid CourseDto courseDto) {
-        Course course = courseRepository.save(courseMapper.dtoToCourse(courseDto));
-        return  courseMapper.courseToDto(course);
+    @Override
+    public Optional<NativeWebRequest> getRequest() {
+        return Optional.of(request);
     }
 
-//    @GetMapping("/search")
-//    public List<CourseDto> searchCourses(
-//            @QuerydslPredicate(root = Course.class)Predicate predicate,
-//            @RequestParam Optional<Boolean> full) {
-//        return courseMapper.courseSummariesToDtos(courseRepository.findAll(predicate));
-//    }
+    @Override
+    public ResponseEntity<CourseDto> createcourse(CourseDto courseDto) {
+        Course course = courseRepository.save(courseMapper.dtoToCourse(courseDto));
+        return ResponseEntity.ok(courseMapper.courseToDto(course));
+    }
 
-    @GetMapping("/search")
-    public List<CourseDto> searchCourses(
-            @QuerydslPredicate(root = Course.class) Predicate predicate,
-            @RequestParam Optional<Boolean> full,
-            @SortDefault("id") Pageable pageable) {
+    public void configurePredicate(@QuerydslPredicate(root = Course.class) Predicate predicate) {}
 
-        if(full.orElse(false)) {
-            return courseMapper.coursesToDtos(courseService.searchCourses(predicate, pageable));
+    public void configPageable(@SortDefault("id") Pageable pageable) {}
+
+    @Override
+    public ResponseEntity<List<CourseDto>> searchCourses(Boolean full, Integer page, Integer size, List<String> sort) {
+        Pageable pageable = resolverHelper.createPageable(this.getClass(), "configPageable", request);
+        Predicate predicate = resolverHelper.createPredicate(this.getClass(), "configurePredicate", request);
+        boolean isFull = full == null ? false : full;
+        if(isFull) {
+            Iterable<Course> courses = courseService.searchCourses(
+                    predicate,
+                    pageable);
+            return ResponseEntity.ok(courseMapper.coursesToDtos(courses));
         } else {
-            return courseMapper.courseSummariesToDtos(courseRepository.findAll(predicate, pageable));
+            Iterable<Course> courses = courseRepository.findAll(predicate, pageable);
+            return ResponseEntity.ok(courseMapper.courseSummariesToDtos(courses));
         }
     }
+
 }
